--- a/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
+++ b/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -36,6 +37,7 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Hf-kZ-XQC">
                             <rect key="frame" x="0.0" y="0.0" width="18" height="110"/>
+                            <color key="tintColor" red="0.38110625739999998" green="0.69713485239999995" blue="0.54975652689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <state key="normal" image="minus" catalog="system">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
@@ -51,6 +53,7 @@
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PJr-al-8Em">
                             <rect key="frame" x="92" y="0.0" width="18" height="110"/>
+                            <color key="tintColor" red="0.38110625739999998" green="0.69713485239999995" blue="0.54975652689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <state key="normal" image="plus" catalog="system">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
@@ -70,7 +73,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    <color key="backgroundColor" red="0.38110625739999998" green="0.69713485239999995" blue="0.54975652689999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstItem="RPg-K7-ZzQ" firstAttribute="centerY" secondItem="f6L-CR-shk" secondAttribute="centerY" id="SV8-W2-Kga"/>
                         <constraint firstAttribute="height" constant="40" id="a49-bO-zaY"/>
@@ -99,9 +102,6 @@
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
