--- a/Sales Tracker/Presentation/Sales History/View/SalesHistoryView.xib
+++ b/Sales Tracker/Presentation/Sales History/View/SalesHistoryView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -83,7 +84,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" red="0.3803921938" green="0.69803923369999998" blue="0.54901963470000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" red="0.054644107820000003" green="0.13721928" blue="0.090301685039999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="2RI-j5-MQg" secondAttribute="trailing" constant="15" id="1HD-Gb-Pmx"/>
                 <constraint firstItem="6gH-s1-ZbS" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="1lv-53-pBx"/>
