--- a/Sales Tracker/Presentation/Product Index/View/ProductIndexView.xib
+++ b/Sales Tracker/Presentation/Product Index/View/ProductIndexView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -104,7 +105,7 @@
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="TzH-yR-Gsi"/>
-            <color key="backgroundColor" red="0.3803921938" green="0.69803923369999998" blue="0.54901963470000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" red="0.054901964960000001" green="0.13333332540000001" blue="0.086274504660000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="wKP-tc-17e" firstAttribute="leading" secondItem="TzH-yR-Gsi" secondAttribute="leading" constant="15" id="6bh-o3-elM"/>
                 <constraint firstItem="TzH-yR-Gsi" firstAttribute="trailing" secondItem="jWt-ee-cfJ" secondAttribute="trailing" constant="15" id="Fd9-T3-PKj"/>
