--- a/Sales Tracker/Presentation/Main Tab Bar/MainTabBarController.storyboard
+++ b/Sales Tracker/Presentation/Main Tab Bar/MainTabBarController.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,6 +20,7 @@
                     <connections>
                         <segue destination="O9V-2o-B1D" kind="relationship" relationship="viewControllers" id="5sr-sb-KKh"/>
                         <segue destination="9nN-eD-V1l" kind="relationship" relationship="viewControllers" id="UDT-C0-JBl"/>
+                        <segue destination="d3b-oq-8Co" kind="relationship" relationship="viewControllers" id="8fp-JS-9Js"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fc4-wc-yhD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -57,12 +59,27 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aRD-P5-dPQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="446" y="69"/>
+            <point key="canvasLocation" x="-278" y="69"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="DGb-fT-ZSa">
+            <objects>
+                <navigationController id="d3b-oq-8Co" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="wrench.fill" catalog="system" id="fI8-w9-3ml"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VKN-t8-J7W">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AsC-L9-EXx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="632" y="82"/>
         </scene>
     </scenes>
     <resources>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
         <image name="shippingbox.fill" catalog="system" width="128" height="124"/>
+        <image name="wrench.fill" catalog="system" width="128" height="125"/>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
