--- a/Sales Tracker/Presentation/Product Select/View/ProductSelectView.xib
+++ b/Sales Tracker/Presentation/Product Select/View/ProductSelectView.xib
@@ -15,16 +15,18 @@
                 <outlet property="addButton" destination="iOE-CV-sg8" id="PHn-J4-7T5"/>
                 <outlet property="imageView" destination="jWb-EB-CPf" id="dZb-1U-1Xf"/>
                 <outlet property="pickerView" destination="Kef-oV-FOJ" id="4mg-Jq-Fcb"/>
+                <outlet property="priceLabel" destination="Frj-RE-Yhs" id="PQX-w3-CI0"/>
                 <outlet property="slideIndicator" destination="9CY-KY-oTv" id="4l6-6D-dfa"/>
+                <outlet property="titleLabel" destination="TBd-UX-3Dc" id="Gx9-tr-mdQ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="402" height="550"/>
+            <rect key="frame" x="0.0" y="0.0" width="410" height="611"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iOE-CV-sg8">
-                    <rect key="frame" x="81" y="490" width="240" height="40"/>
+                    <rect key="frame" x="85" y="551" width="240" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商品を追加" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="16s-sB-TJe">
                             <rect key="frame" x="69" y="8" width="102" height="24"/>
@@ -42,13 +44,13 @@
                     </constraints>
                 </view>
                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kef-oV-FOJ">
-                    <rect key="frame" x="0.0" y="300" width="402" height="170"/>
+                    <rect key="frame" x="0.0" y="361" width="410" height="170"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="170" id="kzF-Om-9c8"/>
                     </constraints>
                 </pickerView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9CY-KY-oTv">
-                    <rect key="frame" x="171" y="15" width="60" height="4"/>
+                    <rect key="frame" x="175" y="15" width="60" height="4"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="4" id="qYN-j2-CNA"/>
@@ -56,26 +58,44 @@
                     </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jWb-EB-CPf">
-                    <rect key="frame" x="16" y="59" width="370" height="225"/>
+                    <rect key="frame" x="16" y="111.5" width="378" height="233.5"/>
                 </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="TBd-UX-3Dc">
+                    <rect key="frame" x="16" y="44" width="378" height="26.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Frj-RE-Yhs">
+                    <rect key="frame" x="16" y="80.5" width="378" height="21"/>
+                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="Frj-RE-Yhs" firstAttribute="top" secondItem="TBd-UX-3Dc" secondAttribute="bottom" constant="10" id="1b2-KM-2Fi"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="jWb-EB-CPf" secondAttribute="trailing" constant="16" id="4Hs-Am-TDo"/>
                 <constraint firstItem="9CY-KY-oTv" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="ADy-mo-Iz7"/>
+                <constraint firstItem="Frj-RE-Yhs" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="AVk-Hj-aG0"/>
+                <constraint firstItem="TBd-UX-3Dc" firstAttribute="top" secondItem="9CY-KY-oTv" secondAttribute="bottom" constant="25" id="Dob-f0-alu"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Frj-RE-Yhs" secondAttribute="trailing" constant="16" id="GSM-DG-uuh"/>
                 <constraint firstItem="Kef-oV-FOJ" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="JuG-XM-m8U"/>
                 <constraint firstItem="Kef-oV-FOJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="RPs-R2-YoD"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="iOE-CV-sg8" secondAttribute="bottom" constant="20" id="Xvo-nd-SHx"/>
                 <constraint firstItem="iOE-CV-sg8" firstAttribute="top" secondItem="Kef-oV-FOJ" secondAttribute="bottom" constant="20" id="bHe-gf-dWm"/>
                 <constraint firstItem="Kef-oV-FOJ" firstAttribute="top" secondItem="jWb-EB-CPf" secondAttribute="bottom" constant="16" id="gey-Pl-Ax8"/>
+                <constraint firstItem="TBd-UX-3Dc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="gs2-1l-fwm"/>
                 <constraint firstItem="9CY-KY-oTv" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="i4V-E2-Mqs"/>
-                <constraint firstItem="jWb-EB-CPf" firstAttribute="top" secondItem="9CY-KY-oTv" secondAttribute="bottom" constant="40" id="iY2-UN-uPj"/>
                 <constraint firstItem="jWb-EB-CPf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="jDK-CW-paU"/>
                 <constraint firstItem="iOE-CV-sg8" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="o9s-jG-z80"/>
+                <constraint firstItem="jWb-EB-CPf" firstAttribute="top" secondItem="Frj-RE-Yhs" secondAttribute="bottom" constant="10" id="yEl-VL-ot3"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="TBd-UX-3Dc" secondAttribute="trailing" constant="16" id="z8k-P0-9My"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="128.98550724637681" y="219.64285714285714"/>
+            <point key="canvasLocation" x="134.78260869565219" y="199.21875"/>
         </view>
     </objects>
     <resources>
