--- a/Sales Tracker/Presentation/Settings/Cells/SettingsTableViewCell.xib
+++ b/Sales Tracker/Presentation/Settings/Cells/SettingsTableViewCell.xib
@@ -17,8 +17,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="n0M-YD-tXC">
-                        <rect key="frame" x="15" y="15.5" width="35" height="34"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowshape.turn.up.right.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="n0M-YD-tXC">
+                        <rect key="frame" x="15" y="16" width="35" height="32.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="5Vb-V1-HBf"/>
                             <constraint firstAttribute="width" constant="35" id="gzN-DK-CyE"/>
@@ -53,6 +53,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="square.and.arrow.up.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="arrowshape.turn.up.right.fill" catalog="system" width="128" height="106"/>
     </resources>
 </document>
