--- a/Sales Tracker/Presentation/Settings/View/SettingsView.xib
+++ b/Sales Tracker/Presentation/Settings/View/SettingsView.xib
@@ -20,13 +20,13 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6bI-lq-YWp">
-                    <rect key="frame" x="0.0" y="30" width="414" height="866"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6bI-lq-YWp">
+                    <rect key="frame" x="0.0" y="106" width="414" height="790"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="0.054649420079999997" green="0.13725990060000001" blue="0.085456676780000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="6bI-lq-YWp" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Fka-w9-4Ch"/>
                 <constraint firstItem="6bI-lq-YWp" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="i93-E2-If9"/>
