--- a/Sales Tracker/Presentation/Settings/Cells/SettingsTableViewCell.xib
+++ b/Sales Tracker/Presentation/Settings/Cells/SettingsTableViewCell.xib
@@ -17,15 +17,16 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="67"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowshape.turn.up.right.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="n0M-YD-tXC">
-                        <rect key="frame" x="15" y="16" width="35" height="32.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rectangle.portrait.and.arrow.right.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="n0M-YD-tXC">
+                        <rect key="frame" x="50" y="15" width="35" height="35"/>
+                        <color key="tintColor" red="0.054649420079999997" green="0.13725990060000001" blue="0.085456676780000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="5Vb-V1-HBf"/>
                             <constraint firstAttribute="width" constant="35" id="gzN-DK-CyE"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6KJ-4U-B0s">
-                        <rect key="frame" x="70" y="15" width="235" height="30"/>
+                        <rect key="frame" x="105" y="15" width="165" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="lmz-jB-Z2v"/>
                         </constraints>
@@ -37,9 +38,9 @@
                 <constraints>
                     <constraint firstItem="6KJ-4U-B0s" firstAttribute="leading" secondItem="n0M-YD-tXC" secondAttribute="trailing" constant="20" id="IDw-WU-VvP"/>
                     <constraint firstItem="6KJ-4U-B0s" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Jod-qa-YFs"/>
-                    <constraint firstItem="n0M-YD-tXC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Tub-55-Wpk"/>
+                    <constraint firstItem="n0M-YD-tXC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="Tub-55-Wpk"/>
                     <constraint firstAttribute="bottom" secondItem="6KJ-4U-B0s" secondAttribute="bottom" constant="15" id="c6A-sK-by7"/>
-                    <constraint firstAttribute="trailing" secondItem="6KJ-4U-B0s" secondAttribute="trailing" constant="15" id="cRU-ZT-58w"/>
+                    <constraint firstAttribute="trailing" secondItem="6KJ-4U-B0s" secondAttribute="trailing" constant="50" id="cRU-ZT-58w"/>
                     <constraint firstItem="n0M-YD-tXC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="fDQ-Hw-FSa"/>
                     <constraint firstAttribute="bottom" secondItem="n0M-YD-tXC" secondAttribute="bottom" constant="15" id="gWa-2r-QFy"/>
                 </constraints>
@@ -53,6 +54,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrowshape.turn.up.right.fill" catalog="system" width="128" height="106"/>
+        <image name="rectangle.portrait.and.arrow.right.fill" catalog="system" width="128" height="108"/>
     </resources>
 </document>
