💄Password field text secure entry.

--- a/Sales Tracker/Presentation/Login/View/LoginView.xib
+++ b/Sales Tracker/Presentation/Login/View/LoginView.xib
@@ -53,7 +53,8 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iqa-Zo-1Wp">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17"
+                                    translatesAutoresizingMaskIntoConstraints="NO" id="iqa-Zo-1Wp">
                                     <rect key="frame" x="0.0" y="80" width="344" height="60"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
