--- a/Sales Tracker/Presentation/Sales History/Presenter/SalesHistoryViewController.xib
+++ b/Sales Tracker/Presentation/Sales History/Presenter/SalesHistoryViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,19 +11,100 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SalesHistoryViewController" customModule="Sales_Tracker" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="noResultsLabel" destination="VQ4-d2-OAV" id="suP-9s-Ytc"/>
+                <outlet property="noResultsView" destination="8x7-Us-3pf" id="SJ6-HX-owh"/>
+                <outlet property="reloadButton" destination="5jJ-pn-cBB" id="hiG-Ru-1PO"/>
+                <outlet property="reloadButtonLabel" destination="dtn-dc-iVc" id="XKz-83-rjf"/>
+                <outlet property="tableView" destination="ys8-ZR-ppX" id="g2P-eG-odL"/>
+                <outlet property="titleLabel" destination="yXb-1y-dTM" id="7Pa-pW-V9t"/>
+                <outlet property="view" destination="zI4-aD-3BK" id="8PY-RL-bAF"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view contentMode="scaleToFill" id="zI4-aD-3BK">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="133" y="80"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="在庫補充" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yXb-1y-dTM">
+                    <rect key="frame" x="15" y="68" width="264" height="32.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="27"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5jJ-pn-cBB">
+                    <rect key="frame" x="299" y="64.5" width="100" height="40"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MSP-q4-UrR">
+                            <rect key="frame" x="12.5" y="7.5" width="75" height="25"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="リロード" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtn-dc-iVc">
+                                    <rect key="frame" x="0.0" y="0.0" width="65" height="25"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="65" id="wBs-Tz-KB8"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
+                                    <color key="textColor" red="0.3803921938" green="0.69803923369999998" blue="0.54901963470000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.clockwise" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BZn-bH-nS1">
+                                    <rect key="frame" x="65" y="-1" width="10" height="25"/>
+                                    <color key="tintColor" red="0.3803921938" green="0.69803923369999998" blue="0.54901963470000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="25" id="6Ks-63-3Bn"/>
+                                        <constraint firstAttribute="width" constant="10" id="d7K-EB-sJ8"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" red="0.93333339689999995" green="0.97254908080000002" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="KeA-la-hMs"/>
+                        <constraint firstAttribute="width" constant="100" id="M6D-iy-C77"/>
+                        <constraint firstItem="MSP-q4-UrR" firstAttribute="centerX" secondItem="5jJ-pn-cBB" secondAttribute="centerX" id="Qbd-H1-AtU"/>
+                        <constraint firstItem="MSP-q4-UrR" firstAttribute="centerY" secondItem="5jJ-pn-cBB" secondAttribute="centerY" id="X7Y-R5-fz9"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ys8-ZR-ppX">
+                    <rect key="frame" x="0.0" y="124.5" width="414" height="737.5"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+                <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8x7-Us-3pf">
+                    <rect key="frame" x="0.0" y="124.5" width="414" height="737.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No results label." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQ4-d2-OAV">
+                            <rect key="frame" x="121" y="356" width="171" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </view>
+            </subviews>
+            <viewLayoutGuide key="safeArea" id="ijT-mr-sZ9"/>
+            <color key="backgroundColor" red="0.054644107820000003" green="0.13721928" blue="0.090301685039999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <constraints>
+                <constraint firstItem="yXb-1y-dTM" firstAttribute="top" secondItem="ijT-mr-sZ9" secondAttribute="top" constant="20" id="4Ek-eF-T7M"/>
+                <constraint firstItem="ijT-mr-sZ9" firstAttribute="trailing" secondItem="5jJ-pn-cBB" secondAttribute="trailing" constant="15" id="95p-Fm-N37"/>
+                <constraint firstItem="ijT-mr-sZ9" firstAttribute="bottom" secondItem="ys8-ZR-ppX" secondAttribute="bottom" id="BC6-U1-f9L"/>
+                <constraint firstItem="yXb-1y-dTM" firstAttribute="leading" secondItem="ijT-mr-sZ9" secondAttribute="leading" constant="15" id="CCw-Z5-yAs"/>
+                <constraint firstItem="ys8-ZR-ppX" firstAttribute="leading" secondItem="ijT-mr-sZ9" secondAttribute="leading" id="TaD-au-nal"/>
+                <constraint firstItem="5jJ-pn-cBB" firstAttribute="leading" secondItem="yXb-1y-dTM" secondAttribute="trailing" constant="20" id="bss-TC-zeW"/>
+                <constraint firstItem="ys8-ZR-ppX" firstAttribute="top" secondItem="5jJ-pn-cBB" secondAttribute="bottom" constant="20" id="iD5-79-lmM"/>
+                <constraint firstItem="8x7-Us-3pf" firstAttribute="bottom" secondItem="ijT-mr-sZ9" secondAttribute="bottom" id="jOV-Uf-NUp"/>
+                <constraint firstItem="5jJ-pn-cBB" firstAttribute="centerY" secondItem="yXb-1y-dTM" secondAttribute="centerY" id="jyC-gE-dSn"/>
+                <constraint firstItem="8x7-Us-3pf" firstAttribute="leading" secondItem="ijT-mr-sZ9" secondAttribute="leading" id="oWi-IR-6dk"/>
+                <constraint firstItem="ys8-ZR-ppX" firstAttribute="trailing" secondItem="ijT-mr-sZ9" secondAttribute="trailing" id="sI9-jU-FQK"/>
+                <constraint firstItem="8x7-Us-3pf" firstAttribute="trailing" secondItem="ijT-mr-sZ9" secondAttribute="trailing" id="v02-ar-i4l"/>
+                <constraint firstItem="8x7-Us-3pf" firstAttribute="top" secondItem="5jJ-pn-cBB" secondAttribute="bottom" constant="20" id="ygg-nX-Ahz"/>
+            </constraints>
+            <point key="canvasLocation" x="-628" y="80"/>
         </view>
     </objects>
     <resources>
+        <image name="arrow.clockwise" catalog="system" width="113" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
